# uciml-llm

./: .gitignore  README.md  datasets.txt  explore_datasets.ipynb  get_datasets.py  prompt.txt  pyproject.toml  run_experiment.py  util.py
results/: Abalone_dataset_qwen2.5-coder_0_25.md  Abalone_dataset_qwen2.5-coder_0_25.md_logs.html  Abalone_dataset_qwen2.5-coder_0_5.md  Abalone_dataset_qwen2.5-coder_0_5.md_logs.html  Audiology (Standardized)_dataset_Audiology (Standardized)_qwen2.5-coder_0_25.md  Audiology (Standardized)_dataset_Audiology (Standardized)_qwen2.5-coder_0_5.md  Audiology (Standardized)_dataset_qwen2.5-coder_0_25.md  Audiology (Standardized)_dataset_qwen2.5-coder_0_25.md_logs.html  Audiology (Standardized)_dataset_qwen2.5-coder_0_5.md  Audiology (Standardized)_dataset_qwen2.5-coder_0_5.md_logs.html  Balance Scale_dataset_qwen2.5-coder_0_25.md_logs.html  Balance Scale_dataset_qwen2.5-coder_0_5.md  Balance Scale_dataset_qwen2.5-coder_0_5.md_logs.html  Balloons_dataset_Balloons_qwen2.5-coder_0_25.md  Balloons_dataset_Balloons_qwen2.5-coder_0_5.md  Balloons_dataset_qwen2.5-coder_0_25.md  Balloons_dataset_qwen2.5-coder_0_25.md_logs.html  Balloons_dataset_qwen2.5-coder_0_5.md  Balloons_dataset_qwen2.5-coder_0_5.md_logs.html  Breast Cancer Wisconsin (Original)_dataset_Breast Cancer Wisconsin (Original)_qwen2.5-coder_0_25.md  Breast Cancer Wisconsin (Original)_dataset_Breast Cancer Wisconsin (Original)_qwen2.5-coder_0_5.md  Breast Cancer Wisconsin (Original)_dataset_qwen2.5-coder_0_25.md  Breast Cancer Wisconsin (Original)_dataset_qwen2.5-coder_0_25.md_logs.html  (+141 more)
