[project]
name = "uciml-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datamodel-code-generator>=0.30.1",
    "ipykernel>=6.29.5",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "smolagents[litellm]>=1.11.0",
    "tabulate>=0.9.0",
    "ucimlrepo>=0.0.7",
]
